# nomerge

./: .gitignore  .pre-commit-hooks.yaml  README.md  setup.cfg
nomerge/: nomerge.py
