# setup.cfg
[metadata]
name = nomerge
description = pre-commit hook to stop commits when comment NOMERGE is found
version = 0.1.1
author = Jon Renner
author_email = rennerjc@gmail.com
license = MIT
url = https://github.com/jrenner/nomerge

[options]
packages = find:

[options.entry_points]
console_scripts =
    nomerge = nomerge.nomerge:main
